--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,8 +9,15 @@ upstream api {
 server {
   listen 80;
 
-  location / {
+  location /{
     proxy_pass http://client;
+  }
+
+  location /sockjs-node {
+    proxy_pass http://client;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
   }
 
   location /api {
